# nurtex

./: Cargo.toml  LICENSE  README.md
crates/nurtex/examples/: reusable_swarm.rs  swarm_control.rs
crates/nurtex/src/bot/: bot.rs  components.rs
crates/nurtex/src/cluster/: cluster.rs
crates/nurtex/src/swarm/: swarm.rs
crates/nurtex/src/world/: entity.rs
docs/: EN.md  RU.md
nurtex/: Cargo.toml  README.md
nurtex-codec/: Cargo.toml  README.md
nurtex-codec/src/: buffer.rs  constants.rs  lib.rs  read.rs
nurtex-codec/src/types/: mod.rs
nurtex-codec/src/types/basic/: boolean.rs  float.rs  int.rs  mod.rs  option.rs  string.rs  uint.rs  vector.rs
nurtex-codec/src/types/extra/: uuid.rs
nurtex-codec/src/types/variable/: mod.rs  var_i32.rs  var_i64.rs
nurtex-derive/: Cargo.toml  README.md
nurtex-derive/src/: extract.rs  generate.rs  lib.rs
nurtex-encrypt/: Cargo.toml  README.md
nurtex-encrypt/src/: encrypt.rs
nurtex-protocol/: Cargo.toml  README.md
nurtex-protocol/examples/: minimal.rs
nurtex-protocol/src/: lib.rs  packet.rs
nurtex-protocol/src/connection/: connection.rs  mod.rs  reader.rs  utils.rs  writer.rs
nurtex-protocol/src/packets/: mod.rs
nurtex-protocol/src/packets/configuration/: enumeration.rs  packets.rs
nurtex-protocol/src/packets/handshake/: enumeration.rs  packets.rs
nurtex-protocol/src/packets/login/: enumeration.rs  packets.rs
nurtex-protocol/src/packets/play/: enumeration.rs  packets.rs
nurtex-protocol/src/packets/status/: enumeration.rs  packets.rs
nurtex-protocol/src/types/: additional_message_info.rs  bit_set.rs  block_pos.rs  block_position.rs  chat_mode.rs  chunk.rs  chunk_block_position.rs  chunk_data.rs  chunk_section_position.rs  client_command.rs  experience.rs  face.rs  game_event.rs  heightmap.rs  intention.rs  interact_type.rs  inventory_item.rs  known_pack.rs  light_data.rs  mod.rs  palette.rs  particle_status.rs  physics_flags.rs  player_action.rs  player_command.rs  player_hand.rs  player_skin.rs  property.rs  report_detail.rs  resource_pack_state.rs  rotation.rs  server_link.rs  tag_group.rs  teleport_flags.rs  text_component.rs  vector.rs
nurtex-protocol/tests/: client.rs
nurtex-proxy/: Cargo.toml  README.md
nurtex-proxy/src/: auth.rs  checker.rs  error.rs  lib.rs  proxy.rs  result.rs
nurtex-proxy/src/tools/: lookup.rs  mod.rs  ping.rs
nurtex-registry/: Cargo.toml  README.md
nurtex-registry/src/: blocks.rs  entities.rs  lib.rs
nurtex/examples/: bot_customization.rs  bot_with_handlers.rs  bot_with_proxy.rs  cluster_control.rs  hello_world.rs  minimal_bot.rs  minimal_cluster.rs  minimal_swarm.rs  reading_packets.rs  reusable_cluster.rs  reusable_swarm.rs  swarm_control.rs  swarm_reading_packets.rs  swarm_with_handlers.rs  swarm_with_speedometer.rs  writing_packets.rs
nurtex/src/: lib.rs
nurtex/src/bot/: bot.rs  capture.rs  connection.rs  information.rs  mod.rs  ping.rs  profile.rs  types.rs
nurtex/src/bot/extensions/: chat.rs
nurtex/src/bot/handlers/: definition.rs  mod.rs  payloads.rs
nurtex/src/bot/plugins/: definition.rs  mod.rs  plugins.rs
nurtex/src/cluster/: cluster.rs
nurtex/src/random/: username.rs
nurtex/src/speedometer/: mod.rs  speedometer.rs
nurtex/src/storage/: storage.rs
nurtex/src/swarm/: join_delay.rs  mod.rs  speedometer.rs  swarm.rs  target.rs
nurtex/src/world/: entity.rs
