[workspace]
members = [
  "nurtex",
  "nurtex-codec",
  "nurtex-derive",
  "nurtex-encrypt",
  "nurtex-protocol",
  "nurtex-proxy",
]
resolver = "3"

[workspace.package]
version = "1.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/NurtexMC/nurtex"

[workspace.dependencies]
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3.32"
futures-util = "0.3.32"
futures-lite = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
aes = "0.8.4"
cfb8 = "0.8.1"
cipher = "0.4"
rand = "0.8"
sha1 = "0.10"
num-bigint = "0.4"
rsa_public_encrypt_pkcs1 = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1.11", features = ["serde"] }
byteorder = "1.5"
quote = "1.0"
bytes = "1.4"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
hashbrown = "0.17.0"
once_cell = "1.21.4"
nurtex-codec = { path = "nurtex-codec", version = "1.1.0" }
nurtex-derive = { path = "nurtex-derive", version = "1.1.0" }
nurtex-encrypt = { path = "nurtex-encrypt", version = "1.1.0" }
nurtex-protocol = { path = "nurtex-protocol", version = "1.1.0" }
nurtex-proxy = { path = "nurtex-proxy", version = "1.1.0" }
