[package]
name = "nurtex-codec"
description = "Library for serializing types from the Minecraft protocol."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/nurtex-codec/latest/"
readme = "README.md"
keywords = ["minecraft", "codec", "serde"]
categories = ["games"]

[lib]
name = "nurtex_codec"
path = "src/lib.rs"

[dependencies]
uuid.workspace = true
byteorder.workspace = true