[package]
name = "nurtex-derive"
description = "Library containing auxiliary procedural macros for serializing packet types."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/nurtex-derive/latest/"
readme = "README.md"
keywords = ["minecraft", "derive", "macro"]
categories = ["games"]

[lib]
name = "nurtex_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true