[package]
name = "nurtex-encrypt"
description = "Library for Minecraft protocol encryption."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/nurtex-encrypt/latest/"
readme = "README.md"
keywords = ["minecraft", "encrypt", "cryptography"]
categories = ["games"]

[lib]
name = "nurtex_encrypt"
path = "src/lib.rs"

[dependencies]
aes.workspace = true
cfb8.workspace = true
cipher.workspace = true
rand.workspace = true
sha1.workspace = true
rsa_public_encrypt_pkcs1.workspace = true