[package]
name = "nurtex-protocol"
description = "Library that allows a Minecraft client to communicate with a server."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/nurtex-protocol/latest/"
readme = "README.md"
keywords = ["minecraft", "protocol"]
categories = ["games", "asynchronous"]

[lib]
name = "nurtex_protocol"
path = "src/lib.rs"

[dependencies]
flate2.workspace = true
futures.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
hashbrown.workspace = true
once_cell.workspace = true
nurtex-codec.workspace = true
nurtex-encrypt.workspace = true
nurtex-derive.workspace = true
nurtex-proxy.workspace = true