[package]
name = "nurtex"
description = "Library for creating Minecraft bots."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/nurtex/latest/"
readme = "README.md"
keywords = ["minecraft", "bot", "async", "simple"]
categories = ["games", "asynchronous"]

[lib]
name = "nurtex"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
uuid.workspace = true
hashbrown.workspace = true
rand.workspace = true
nurtex-protocol.workspace = true
nurtex-proxy.workspace = true