[package]
name = "nurtex"
description = "Create efficient and lightweight Minecraft bots or clients."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/nurtex/latest/"
readme = "README.md"
keywords = ["minecraft", "bot", "async", "fast"]
categories = ["games", "asynchronous"]

[lib]
name = "nurtex"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
uuid.workspace = true
hashbrown.workspace = true
rand.workspace = true
nurtex-protocol.workspace = true
nurtex-proxy.workspace = true
nurtex-registry.workspace = true

[dev-dependencies]
nurtex = { path = ".", features = ["all"] }
tokio = { version = "1.50.0", features = ["full"] }

[features]
bot = []
proxy = ["bot"]
swarm = ["bot"]
cluster = ["bot", "swarm"]
speedometer = ["bot"]
random = []
default = ["bot", "proxy", "swarm"]
all = ["bot", "proxy", "swarm", "cluster", "speedometer", "random"]